syntax = "proto3";

package api;
option go_package = "/api";
import "user.proto";
import "cargo.proto";
import "transport.proto";
import "truck.proto";
import "roadside_service.proto";
import "service_station.proto";
import "spare_parts.proto";

message Company {
   int64 id = 1;
   string name = 2;
   string bin = 3;
   string email = 4;
   string phone = 5;
   string activityType = 6;
   repeated string documents = 7;
   repeated string images = 8;
   uint64 cityId = 11;
   string address = 12;
}

message CreateCompanyResponse {
  uint64 id = 1;
  bool success = 2;
}

message GetCompanyRequest {
  uint64 id = 1;
}

message GetCompanyByUserRequest {
  string email = 1;
}

message DeleteCompanyRequest {
  uint64 id = 1;
}

message CommonCompanyResponse {
  bool success = 1;
  string error = 2;
}

message FindCompanyResponse {
  int64 id = 1;
  string name = 2;
  string bin = 3;
  string email = 4;
  string phone = 5;
  string activityType = 6;
  repeated string documents = 7;
  repeated string images = 8;
  message Owner {
    uint64 id = 1;
    string name = 2;
  }
  Owner owner = 10;
  uint64 cityId = 11;
  string address = 12;
  string createdAt = 13;
}

message Review {
  bool positive = 1;
  string text = 2;
  uint64 entityId = 3;
  string entityType = 4;
}

message ReviewRequest {
  uint64 entityId = 2;
  string entityType = 3;
}


message ReviewResponse {
  repeated Review reviews = 1;
}

message EmployeesResponse {
  repeated TslUser employees = 1;
}

service CompanyService {
  rpc Get(GetCompanyRequest) returns (FindCompanyResponse) {};
  rpc GetByUser(GetCompanyByUserRequest) returns (FindCompanyResponse) {};
  rpc Create(Company) returns (CreateCompanyResponse) {};
  rpc Delete(DeleteCompanyRequest) returns (CommonCompanyResponse) {};
  rpc CreateReview(Review) returns (CommonCompanyResponse) {};
  rpc ListReview(ReviewRequest) returns (ReviewResponse) {};
  rpc AddEmployee(CreateUserRequest) returns (CreateUserResponse) {};
  rpc ListEmployees(GetCompanyRequest) returns (EmployeesResponse) {};
  rpc RemoveEmployee(DeleteUserRequest) returns (CommonUserResponse) {};
}

message Favorite {
  string entityType = 1;
  uint64 id = 2;
}

message FavoritesResponse{
  repeated Favorite favorite = 1;
}

message FavoritesRequest{
  string entityType = 1;
  uint32 limit = 2;
  uint32 offset = 3;
}

message MyRequest {
  uint32 limit =1;
  uint32 offset = 2;
}

message MyResponse {
  oneof my {
    FindCargoResponse cargo = 1;
    FindTransportResponse transport = 2;
    FindRoadsideServiceResponse roadsideService = 3;
    FindServiceStationResponse serviceStation = 4;
    FindSparePartResponse spareParts = 5;
    FindTruckResponse truck = 6;
  }
}

service Profile {
  rpc ListFavorites(FavoritesRequest) returns (FavoritesResponse) {};
  rpc AddFavorite(Favorite) returns (CommonUserResponse) {};
  rpc DeleteFavorite(Favorite) returns (CommonUserResponse) {};
  rpc ListMyCargo(MyRequest) returns (MyResponse) {};
  rpc ListMyTransport(MyRequest) returns (MyResponse) {};
  rpc ListMyRoadsideService(MyRequest) returns (MyResponse) {};
  rpc ListMyServiceStation(MyRequest) returns (MyResponse) {};
  rpc ListMySpareParts(MyRequest) returns (MyResponse) {};
  rpc ListMyTruck(MyRequest) returns (MyResponse) {};
}